--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red1">#FF5858</color>
+    <color name="red2">#FFD93943</color>
+    <color name="studentItem">#FFF5F5F5</color>
+    <color name="attendance_number_background">#FFF4F6F9</color>
 </resources>
